// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`A Movement test suite > Turn > should generate a simple movement 1`] = `
{
  "events": [
    {
      "key": "C",
      "position": "IV",
      "root": "F",
      "scaleName": "Lydian",
      "turn": {
        "interval": "Free",
        "type": "Start",
      },
      "type": "mode",
    },
    {
      "key": "C",
      "position": "I",
      "root": "C",
      "scaleName": "Ionian",
      "turn": {
        "interval": 5,
        "type": "ModeUp",
      },
      "type": "mode",
    },
    {
      "key": "C",
      "position": "I",
      "root": "C",
      "scaleName": "Ionian",
      "turn": {
        "interval": "Free",
        "type": "Free",
      },
      "type": "mode",
    },
    {
      "key": "F",
      "position": "I",
      "root": "F",
      "scaleName": "Ionian",
      "turn": {
        "interval": "5P",
        "type": "ModulateDown",
      },
      "type": "key",
    },
    {
      "key": "C",
      "position": "IV",
      "root": "F",
      "scaleName": "Lydian",
      "turn": {
        "interval": "Free",
        "type": "Start",
      },
      "type": "mode",
    },
    {
      "key": "C",
      "position": "VII",
      "root": "B",
      "scaleName": "Locrian",
      "turn": {
        "interval": 5,
        "type": "ModeDown",
      },
      "type": "mode",
    },
    {
      "key": "E",
      "position": "VII",
      "root": "E",
      "scaleName": "Locrian",
      "turn": {
        "interval": "4P",
        "type": "ModulateUp",
      },
      "type": "key",
    },
    {
      "key": "E",
      "position": "III",
      "root": "A",
      "scaleName": "Phrygian",
      "turn": {
        "interval": 5,
        "type": "ModeDown",
      },
      "type": "mode",
    },
  ],
  "timeline": [
    {
      "dur": 960,
      "key": {
        "root": "F",
        "scale": "1P 2M 3M 4A 5P 6M 7M",
      },
      "time": 0,
    },
    {
      "dur": 960,
      "key": {
        "root": "C",
        "scale": "1P 2M 3M 4P 5P 6M 7M",
      },
      "time": 960,
    },
    {
      "dur": 960,
      "key": {
        "root": "C",
        "scale": "1P 2M 3M 4P 5P 6M 7M",
      },
      "time": 1920,
    },
    {
      "dur": 960,
      "key": {
        "root": "F",
        "scale": "1P 2M 3M 4P 5P 6M 7M",
      },
      "time": 2880,
    },
    {
      "dur": 960,
      "key": {
        "root": "F",
        "scale": "1P 2M 3M 4A 5P 6M 7M",
      },
      "time": 3840,
    },
    {
      "dur": 960,
      "key": {
        "root": "B",
        "scale": "1P 2m 3m 4P 5d 6m 7m",
      },
      "time": 4800,
    },
    {
      "dur": 960,
      "key": {
        "root": "E",
        "scale": "1P 2m 3m 4P 5d 6m 7m",
      },
      "time": 5760,
    },
    {
      "dur": 960,
      "key": {
        "root": "A",
        "scale": "1P 2m 3m 4P 5P 6m 7m",
      },
      "time": 6720,
    },
  ],
}
`;

exports[`A Movement test suite > Turn > should generate a turn rhythm movement 1`] = `
{
  "events": [
    {
      "key": "A",
      "position": "II",
      "root": "D",
      "scaleName": "Dorian",
      "turn": {
        "interval": "Free",
        "type": "Start",
      },
      "type": "mode",
    },
    {
      "key": "A",
      "position": "VI",
      "root": "A",
      "scaleName": "Aeolian",
      "turn": {
        "interval": 5,
        "type": "ModeUp",
      },
      "type": "mode",
    },
    {
      "key": "A",
      "position": "II",
      "root": "D",
      "scaleName": "Dorian",
      "turn": {
        "interval": "Free",
        "type": "Free",
      },
      "type": "mode",
    },
    {
      "key": "G",
      "position": "II",
      "root": "G",
      "scaleName": "Dorian",
      "turn": {
        "interval": "5P",
        "type": "ModulateDown",
      },
      "type": "key",
    },
    {
      "key": "G",
      "position": "V",
      "root": "C",
      "scaleName": "Mixolydian",
      "turn": {
        "interval": 4,
        "type": "ModeUp",
      },
      "type": "mode",
    },
    {
      "key": "G",
      "position": "I",
      "root": "F",
      "scaleName": "Ionian",
      "turn": {
        "interval": 5,
        "type": "ModeDown",
      },
      "type": "mode",
    },
  ],
  "timeline": [
    {
      "dur": 160,
      "key": {
        "root": "D",
        "scale": "1P 2M 3m 4P 5P 6M 7m",
      },
      "time": 0,
    },
    {
      "dur": 80,
      "key": {
        "root": "A",
        "scale": "1P 2M 3m 4P 5P 6m 7m",
      },
      "time": 160,
    },
    {
      "dur": 1920,
      "key": {
        "root": "D",
        "scale": "1P 2M 3m 4P 5P 6M 7m",
      },
      "time": 240,
    },
    {
      "dur": 480,
      "key": {
        "root": "G",
        "scale": "1P 2M 3m 4P 5P 6M 7m",
      },
      "time": 2160,
    },
    {
      "dur": 2880,
      "key": {
        "root": "C",
        "scale": "1P 2M 3M 4P 5P 6M 7m",
      },
      "time": 2640,
    },
    {
      "dur": 2160,
      "key": {
        "root": "F",
        "scale": "1P 2M 3M 4P 5P 6M 7M",
      },
      "time": 5520,
    },
  ],
}
`;

exports[`A Movement test suite > Turn > should generate non buggy 1`] = `
{
  "events": [
    {
      "key": "C",
      "position": "I",
      "root": "G",
      "scaleName": "Ionian",
      "turn": {
        "interval": 5,
        "type": "Start",
      },
      "type": "mode",
    },
    {
      "key": "C",
      "position": "IV",
      "root": "C",
      "scaleName": "Lydian",
      "turn": {
        "interval": 4,
        "type": "ModeUp",
      },
      "type": "mode",
    },
    {
      "key": "Ab",
      "position": "IV",
      "root": "Ab",
      "scaleName": "Lydian",
      "turn": {
        "interval": "3M",
        "type": "ModulateDown",
      },
      "type": "key",
    },
    {
      "key": "Ab",
      "position": "IV",
      "root": "Ab",
      "scaleName": "Lydian",
      "turn": {
        "interval": 2,
        "type": "Keep",
      },
      "type": "mode",
    },
    {
      "key": "Ab",
      "position": "VII",
      "root": "D",
      "scaleName": "Locrian",
      "turn": {
        "interval": 4,
        "type": "ModeUp",
      },
      "type": "mode",
    },
    {
      "key": "Ab",
      "position": "III",
      "root": "G",
      "scaleName": "Phrygian",
      "turn": {
        "interval": 5,
        "type": "ModeDown",
      },
      "type": "mode",
    },
    {
      "key": "A",
      "position": "III",
      "root": "A",
      "scaleName": "Phrygian",
      "turn": {
        "interval": "2M",
        "type": "ModulateUp",
      },
      "type": "key",
    },
    {
      "key": "A",
      "position": "VI",
      "root": "D",
      "scaleName": "Aeolian",
      "turn": {
        "interval": 2,
        "type": "Free",
      },
      "type": "mode",
    },
  ],
  "timeline": [
    {
      "dur": 960,
      "key": {
        "root": "G",
        "scale": "1P 2M 3M 4P 5P 6M 7M",
      },
      "time": 0,
    },
    {
      "dur": 960,
      "key": {
        "root": "C",
        "scale": "1P 2M 3M 4A 5P 6M 7M",
      },
      "time": 960,
    },
    {
      "dur": 960,
      "key": {
        "root": "Ab",
        "scale": "1P 2M 3M 4A 5P 6M 7M",
      },
      "time": 1920,
    },
    {
      "dur": 960,
      "key": {
        "root": "Ab",
        "scale": "1P 2M 3M 4A 5P 6M 7M",
      },
      "time": 2880,
    },
    {
      "dur": 960,
      "key": {
        "root": "D",
        "scale": "1P 2m 3m 4P 5d 6m 7m",
      },
      "time": 3840,
    },
    {
      "dur": 960,
      "key": {
        "root": "G",
        "scale": "1P 2m 3m 4P 5P 6m 7m",
      },
      "time": 4800,
    },
    {
      "dur": 960,
      "key": {
        "root": "A",
        "scale": "1P 2m 3m 4P 5P 6m 7m",
      },
      "time": 5760,
    },
    {
      "dur": 960,
      "key": {
        "root": "D",
        "scale": "1P 2M 3m 4P 5P 6m 7m",
      },
      "time": 6720,
    },
  ],
}
`;
